# docrag

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/commands/: docrag.md
docrag/: __init__.py  answer.py  ask.py  chunk.py  db.py  embed.py  eval.py  extract.py  extractors.py  facets.py  index.py  mcp_server.py  query.py  reason.py  registry.py  rerank.py  settings.py
docrag/domains/: base.py
docrag/domains/building_codes/: __init__.py
docrag/domains/youtube/: answer.py  ingest.py  mcp_server.py
evalset/: building-codes.jsonl
scraper/: PENDING_SOURCES.md  fetch_botwalled.py  fetch_fema.py  fetch_methods_mainstream.sh  fetch_methods_natural.sh  fetch_sources.sh  icc_session.py  login_debug.py  recon.py  requirements.txt  scrape.py  scrape_durham_site.py  scrape_ncosfm.py
scraper/recon/: cookies.json  login_status.json  nc_category.html  nc_category_xhr.json  nc_titles_all.json
server/: server.py
server/web/: chat.css  chat.js  index.html
src/rag/: answer.py  ask.py  cli.py  db.py  eval.py  extract.py  extractors.py  facets.py  index.py  mcp_server.py  query.py  registry.py  rerank.py  settings.py
src/rag/core/: __init__.py  chat.py  orchestrate.py
src/rag/domains/: __init__.py  base.py
src/rag/domains/building_codes/: __init__.py  prompts.py  retrieval.py
src/rag/domains/youtube/: __init__.py  answer.py  chunker.py  ingest.py  mapreduce.py  mcp_server.py  prompts.py
